Wrap tabs to prevent breaking mobile layout

--- a/web/themes/custom/union_marketing/scss/components/_tabs.scss
+++ b/web/themes/custom/union_marketing/scss/components/_tabs.scss
@@ -1,5 +1,6 @@
 %tabs {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   border-bottom: 1px solid $color-border;
   padding: 0;
